Removed GET on /applications
+ beginning of Rule spec (endpoint & entity)
