# gamification-impl/src/main/java/ch/heigvd/amt/gamification/api/endpoints/ApplicationsApiController.java
@@ -36,14 +36,14 @@ public class ApplicationsApiController implements ApplicationsApi {
         return ResponseEntity.ok().header("X-API-KEY", newApplicationEntity.getKey()).build();
     }
 
-    // TODO : Enlever l'endpoint GET sur /applications (on le laisse pour le debug)
-    public ResponseEntity<List<Application>> getApplications() {
+    // FIXME : Enlever l'endpoint GET sur /applications (on le laisse pour le debug)
+    /*public ResponseEntity<List<Application>> getApplications() {
         List<Application> applications = new ArrayList<>();
         for(ApplicationEntity applicationEntity : applicationRepository.findAll()) {
             applications.add(toApplication(applicationEntity));
         }
         return ResponseEntity.ok(applications);
-    }
+    }*/
 
     //@Override ?
     public ResponseEntity<Application> getApplication(@ApiParam(value = "", required = true) @PathVariable("id") Integer id) {
