# gamification-specs/src/main/resources/api-spec.yaml
@@ -19,18 +19,18 @@ paths:
       responses:
         '201':
           description: created
-    get:
-      description: get the list of all applications
-      operationId: getApplications
-      responses:
-        '200':
-          description: success
-          content:
-            'application/json':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Application'
+            #get:
+            # description: get the list of all applications
+            #operationId: getApplications
+            #responses:
+            #  '200':
+            #   description: success
+            #  content:
+            #   'application/json':
+          #    schema:
+          #     type: array
+          #    items:
+          #     $ref: '#/components/schemas/Application'
   /badges:
     post:
       description: create a badge
@@ -114,6 +114,18 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/User'
+  /rules:
+    post:
+      description: create a rule
+      operationId: createRule
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/Rule'
+      responses:
+        '201':
+          description: created
 components:
   securitySchemes:
     #    bearerAuth:            # arbitrary name for the security scheme
@@ -168,3 +180,16 @@ components:
           type: string
         nbBadges:
           type: integer
+    Rule:
+      type: object
+      properties:
+        if:
+          type: object
+          properties:
+            type:
+              type: string
+        then:
+          type: object
+          properties:
+            awardBadge:
+              type: string
